feat(decoderonly): add reusable dense projection frameworks and align SmolLM2 runtime
- Introduced `DecoderOnlyDenseProjection` interface as a shared projection boundary for decoder-only models.
- Added `DecoderOnlyReferenceDenseProjection` and `DecoderOnlyWarpDenseProjection` implementations for Java and DirectML/WARP runtimes, respectively.
- Migrated dense math utilities to `DecoderOnlyReferenceDenseOps` for cross-family SIMD/scalar reuse.
- Updated SmolLM2 runtime (`SmolLM2ReferenceForwardPass`, `SmolLM2DenseTensor`) to utilize decoder-only framework for projection and dense ops.
- Included unit tests for reference and WARP dense projections, validating correctness and consistency.